# mycobot280

./: README.md
mycobot280/: CMakeLists.txt  package.xml
mycobot280/config/: display.rviz  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  mycobot280.srdf  ros2_controllers.yaml
mycobot280/launch/: controller.launch.py  display.launch.py  gazebo.launch.py  moveit.launch.py  slider_controller.launch.py
mycobot280/meshes/: Link1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL
mycobot280/scripts/: detect.py  image_display.py
mycobot280/src/: send_joint_goal_node.cpp  send_pose_node.cpp
mycobot280/urdf/: camera.gazebo.xacro  robot.gazebo.xacro  robot.ros2_control.xacro  robot.urdf.xacro
